component/tests/golden/vshn/appcat/appcat/sla_reporter/03_network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    name: allow-from-appcat-slos
  name: allow-from-appcat-slos
  namespace: prometheus-system
spec:
  egress: []
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: appcat-slos
  podSelector: {}
  policyTypes:
    - Ingress
